Type change to allow SignalR serialization

--- a/src/MOnGoL.Frontend/Shared/Board.razor
+++ b/src/MOnGoL.Frontend/Shared/Board.razor
@@ -9,7 +9,7 @@
                 var emo = @Coor(coor);
                 if (emo is null)
                 {
-                    <td class="p-0 text-center align-middle"><button class="btn btn-light" @onclick="@(e => Put(coor))">&nbsp;</button></td>
+                    <td class="p-0 text-center align-middle"><label class="btn btn-light" @onclick="@(e => Put(coor))">&nbsp;</label></td>
                 }
                 else
                 {
