Use white emoji instead of button for empty tiles

--- a/src/MOnGoL.Frontend/Shared/Board.razor
+++ b/src/MOnGoL.Frontend/Shared/Board.razor
@@ -9,7 +9,7 @@
                 var token = @Coor(coor);
                 if (token is null)
                 {
-                    <td class="p-0 text-center align-middle"><label class="btn btn-light" @onclick="@(e => Put(coor))">&nbsp;</label></td>
+                <td class="p-0 text-center align-middle text-white" @onclick="@(e => Put(coor))">@DummyEmoji</td>
                 }
                 else
                 {
