Move playerlist to menu; more stable grid

--- a/src/MOnGoL.Frontend/Shared/PlayerList.razor
+++ b/src/MOnGoL.Frontend/Shared/PlayerList.razor
@@ -1,4 +1,4 @@
-﻿<table class="table table-sm">
+﻿<table class="table table-sm bg-light">
     <tr>
         <th scope="col">Name</th>
         <th scope="col">Emoji</th>
