--- a/src/MOnGoL.Frontend/Shared/NavMenu.razor
+++ b/src/MOnGoL.Frontend/Shared/NavMenu.razor
@@ -17,6 +17,7 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Play!
             </NavLink>
         </li>
+        <li><PlayerList/></li>
     </ul>
 </div>
 
