--- a/src/MOnGoL.Frontend/Shared/NavMenu.razor
+++ b/src/MOnGoL.Frontend/Shared/NavMenu.razor
@@ -8,13 +8,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Login
+            <NavLink class="nav-link" href="login" Match="NavLinkMatch.All">
+                <span class="oi oi-person" aria-hidden="true"></span> Login
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Play!
+            <NavLink class="nav-link" href="play">
+                <span class="oi oi-media-play" aria-hidden="true"></span> Play!
             </NavLink>
         </li>
         <li><PlayerList/></li>
