Slower auto-login; optional nav-back button on game page

--- a/src/MOnGoL.Frontend/Pages/Play.razor
+++ b/src/MOnGoL.Frontend/Pages/Play.razor
@@ -1,6 +1,8 @@
 ﻿@page "/play"
 <h1>Five-in-a-row Game-of-Life</h1>
-
+<div class="row">
+    <LoginButton />
+</div>
 <div class="row">
     <Board />
 </div>
