--- a/src/MOnGoL.Frontend/Pages/Play.razor
+++ b/src/MOnGoL.Frontend/Pages/Play.razor
@@ -1,8 +1,13 @@
 ﻿@page "/play"
-<h1>Five-in-a-row Game-of-Life</h1>
+
+<div class="row">
+    <h1>Five-in-a-row Game-of-Life</h1>
+</div>
+
 <div class="row">
     <LoginButton />
 </div>
+
 <div class="row">
     <Board />
 </div>
