--- a/src/MOnGoL.Frontend/Shared/Board.razor
+++ b/src/MOnGoL.Frontend/Shared/Board.razor
@@ -1,29 +1,31 @@
-﻿<table class="table table-bordered">
-    @if (board is not null)
-    {
-        @foreach (var row in Rows)
+﻿<div>
+    <table class="table table-bordered">
+        @if (board is not null)
+        {
+            @foreach (var row in Rows)
+            {
+                <tr>
+                    @foreach (var coor in row)
+                    {
+                        var token = @Coor(coor);
+                        if (token is null)
+                        {
+                            <td class="p-0 text-center align-middle text-white" @onclick="@(e => Put(coor))" width="25px" height="25px">@DummyEmoji</td>
+                        }
+                        else
+                        {
+                            var bg = token.Scored ? "bg-warning" : "";
+                            <td class="p-0 text-center align-middle @bg" width="25px" height="25px">@token.Emoji</td>
+                        }
+                    }
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                @foreach (var coor in row)
-                {
-                    var token = @Coor(coor);
-                    if (token is null)
-                    {
-                        <td class="p-0 text-center align-middle text-white" @onclick="@(e => Put(coor))" width="25px" height="25px">@DummyEmoji</td>
-                    }
-                    else
-                    {
-                        var bg = token.Scored ? "bg-warning" : "";
-                        <td class="p-0 text-center align-middle @bg" width="25px" height="25px">@token.Emoji</td>
-                    }
-                }
+                <td>Loading...</td>
             </tr>
         }
-    }
-    else
-    {
-        <tr>
-            <td>Loading...</td>
-        </tr>
-    }
-</table>
+    </table>
+</div>
